# terminus-image

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
cmake/modules/: FindISIS.cmake
cmake/scripts/: Find_Dependencies.cmake
data/unit-test-data/: test_images.ini
data/unit-test-data/collection/: dummy-collection.toml
include/terminus/: CMakeLists.txt
include/terminus/feature/: Detector_Base.hpp  Detector_Config_Base.hpp  Detector_Factory.hpp  Detector_Generator_Base.hpp  Detector_Traits.hpp  FeatureExtractor.hpp  Interest_Point.hpp  detect_interest_points.hpp  extract_descriptors.hpp  find_keypoints.hpp
include/terminus/feature/drivers/: Detector_Driver_Manager.hpp
include/terminus/feature/utilities/: draw_interest_points.hpp
include/terminus/feature/utility/: Interest_Detection_Queue.hpp  Interest_Point_Detection_Task.hpp  Interest_Point_Write_Task.hpp
include/terminus/geography/camera/: Camera_Model_Adjusted.hpp  Camera_Model_Base.hpp  Camera_Model_Factory.hpp  Camera_Model_ISIS.hpp  Camera_Model_Pinhole.hpp  Distortion_Base.hpp  Distortion_Brown_Conrady.hpp  Distortion_Null.hpp
include/terminus/geography/coordinate/: Datum.hpp
include/terminus/image/: Image_Base.hpp  Image_Buffer.hpp  Image_Format.hpp  Image_Memory.hpp  Image_Resource_Base.hpp  Pixel_Iterator.hpp
include/terminus/image/collection/: Collection_Resource_Base.hpp  Collection_Resource_File.hpp
include/terminus/image/error/: ErrorCategory.hpp  ErrorCode.hpp
include/terminus/image/io/: Image_Resource_Disk.hpp  Image_Resource_Memory.hpp  Read_Image_Resource_Disk.hpp  Read_Image_Resource_Memory.hpp  Write_Image_Resource_Disk.hpp  Write_Image_Resource_Memory.hpp  read_image.hpp  read_image_disk.hpp  read_image_from_resource.hpp  write_image.hpp
include/terminus/image/metadata/: Metadata_Container_Base.hpp
include/terminus/image/operations/: Crop_View.hpp  clamp.hpp  crop_image.hpp  normalize.hpp  pixel_cast.hpp  rasterize.hpp  select_plane.hpp
include/terminus/warpcore/: CMakeLists.txt
src/: CMakeLists.txt
src/image/: CMakeLists.txt  Image_Buffer.cpp  Image_Format.cpp  Image_Resource_Base.cpp
src/image/io/: CMakeLists.txt  Read_Image_Resource_Disk.cpp
src/image/io/drivers/: CMakeLists.txt  Disk_Driver_Manager.cpp  Memory_Driver_Manager.cpp
src/image/io/drivers/gdal/: CMakeLists.txt  GDAL_Codes.cpp  GDAL_Disk_Image_Impl.cpp  GDAL_Disk_Image_Impl.hpp  GDAL_Utilities.cpp  GDAL_Utilities.hpp  Read_Image_Resource_Disk_GDAL.cpp  Read_Image_Resource_Disk_GDAL_Factory.cpp
src/image/pixel/: CMakeLists.txt  Channel_Type_Enum.cpp  Pixel_Format_Enum.cpp
src/libwarpcore/: CMakeLists.txt
src/libwarpcore/image/: Image.hpp
src/terminus/: CMakeLists.txt  Makefile  cmake_install.cmake
src/terminus/feature/: CMakeLists.txt  Detector_Base.cpp  Detector_Config_Base.cpp  Detector_Factory.cpp  Interest_Point.cpp
src/terminus/feature/drivers/ocv/: CMakeLists.txt  Detector_OCV_Base.cpp  Detector_OCV_GFTT.cpp  Detector_OCV_ORB.cpp  OpenCV_Detector_Utilities.cpp  OpenCV_Detector_Utilities.hpp
src/terminus/feature/drivers/ocv/config/: CMakeLists.txt  Detector_Config_OCV_Base.cpp  Detector_Config_OCV_GFTT.cpp  Detector_Config_OCV_ORB.cpp
src/terminus/feature/utility/: Detector_Image_Utilities.hpp  Interest_Point_Write_Task.cpp
src/terminus/geography/: CMakeLists.txt
src/terminus/geography/coordinate/: CMakeLists.txt  Datum.cpp  Datum_Impl.hpp
src/terminus/image/: CMakeLists.txt  Image_Buffer.cpp  Image_Format.cpp
src/terminus/image/collection/file/: CMakeLists.txt  File_Collection_Utilities.cpp  TOML_Utilities.cpp  TOML_Utilities.hpp
src/terminus/image/io/: Read_Image_Resource_Disk.cpp
src/terminus/image/io/drivers/: CMakeLists.txt  Disk_Driver_Manager.cpp  Memory_Driver_Manager.cpp
src/terminus/image/io/drivers/gdal/: CMakeLists.txt  GDAL_Disk_Image_Impl.cpp  GDAL_Disk_Image_Impl.hpp  GDAL_Utilities.cpp  GDAL_Utilities.hpp  ISIS_JSON_Parser.cpp  ISIS_JSON_Parser.hpp  Image_Resource_Disk_GDAL.cpp  Image_Resource_Disk_GDAL_Factory.cpp  Read_Image_Resource_Disk_GDAL.cpp
src/terminus/image/metadata/: Metadata_Container_Base.cpp
src/terminus/image/pixel/: Channel_Type_Enum.cpp  Pixel_Format_Enum.cpp  convert.cpp
src/terminus/image/types/: Image_Buffer.cpp  Image_Format.cpp  Image_Resource_Base.cpp
src/terminus/image/utility/: OpenCV_Utilities.cpp  OpenCV_Utilities.hpp  View_Utilities.cpp
tests/: CMakeLists.txt
tests/component/: CMakeLists.txt  TEST_file_io.cpp
tests/unit/: CMakeLists.txt  TEST_scratch.cpp  TEST_tomlplusplus.cpp  main.cpp
tests/unit/UNIT_TEST_ONLY/: Image_Datastore.cpp  Image_Datastore.hpp  Options.cpp  Options.hpp  Prerasterization_Test_View.hpp  Test_Environment.cpp  Test_Environment.hpp
tests/unit/feature/: TEST_detect_interest_points.cpp  TEST_extract_descriptors.cpp  TEST_find_keypoints.cpp
tests/unit/feature/drivers/ocv/: TEST_Detector_OCV_GFTT.cpp  TEST_Detector_OCV_ORB.cpp  TEST_ocv_gftt.cpp  TEST_ocv_orb.cpp
tests/unit/geography/camera/: TEST_Camera_Model_Factory.cpp
tests/unit/image/collection/: TEST_Collection_Resource_File.cpp
tests/unit/image/io/: TEST_read_image.cpp  TEST_read_image_disk.cpp  TEST_read_write_battery.cpp
tests/unit/image/io/drivers/gdal/: TEST_GDAL_Utilities.cpp  TEST_Image_Resource_Disk_GDAL.cpp  TEST_Image_Resource_Disk_GDAL_Factory.cpp  TEST_Read_Image_Resource_Disk_GDAL_Factory.cpp
tests/unit/image/operations/: TEST_crop_image.cpp  TEST_select_plane.cpp
tests/unit/image/operations/drawing/: TEST_compute_line_points.cpp  TEST_drawing_functions.cpp
tests/unit/image/pixel/: TEST_Channel_Cast_Utilities.cpp  TEST_Pixel_Cast_Utilities.cpp  TEST_Pixel_RGB.cpp  TEST_convert.cpp
tests/unit/image/types/: TEST_Compound_Types.cpp  TEST_Fundamental_Types.cpp  TEST_Image_Disk.cpp  TEST_Image_Memory.cpp  TEST_Image_Resource_View.cpp
tests/unit/image/utility/: TEST_OpenCV_Utilities.cpp
tests/unit/io/: TEST_ImageIO.cpp  TEST_read_image.cpp
tests/unit/io/drivers/gdal/: TEST_GDAL_Codes.cpp  TEST_GDAL_Utilities.cpp
tests/unit/terminus/: CMakeLists.txt
tests/unit/terminus/io/test/: TEST_ImageIO.cpp
(+103 files in other folders)
